↑ represent column and beam by sweep
↑ column and beam are now represented by sweeps
↑ use bounding box not the exact geometry to represent the column
× GBMethod.transCoords() only performs rotation on XY plane, leaving Z coordinate unchanged.
× check if Util.GetFamilyInstanceLocation() returns null
× JoinGeometryUtils.GetJoinedElements() takes arguments: the document and the element INSIDE that document
× GetConvexHull() no longer changes the input sequence of points
× ViewExportXML.xaml wrong binding with patchFloor

--- a/Gingerbread/Views/ViewExportXML.xaml
+++ b/Gingerbread/Views/ViewExportXML.xaml
@@ -307,7 +307,7 @@ grids. Use this value to tune the collapsing radius."></TextBlock>
                             </StackPanel>
 
                             <StackPanel Margin="0 10 5 5">
-                                <CheckBox x:Name="PatchFloorHole" IsChecked="{Binding Source={x:Static p:Settings.Default}, Path=patchFloor, Mode=TwoWay}"
+                                <CheckBox x:Name="PatchFloorHole" IsChecked="{Binding Source={x:Static p:Settings.Default}, Path=patchFloorHole, Mode=TwoWay}"
                               Checked ="PatchFloorHole_Checked" Unchecked ="PatchFloorHole_Unchecked"  Margin="0 0 0 5" 
                               ToolTip="The hole within the floor that may indicate an atrium. The atrim boundary will&#x0a;
 create an air wall between the atrium and adjacent spaces. If checked, the algorithm will &#x0a;
